# vidforge

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.ai/: PLAN.md  README.md
.github/workflows/: generate.yml  lint.yml  pages.yml
config/characters/: dragon_ball_z.yaml
config/recipes/: anime_heights_dbz.yaml
scripts/: build_pages.py  check-no-scoped-imports.sh
src/vidforge/: __init__.py  cli.py  models.py  pipeline.py
src/vidforge/assets/: bg_remove.py  cache.py  images.py  music.py  pose_check.py  scoring.py
src/vidforge/debug/: __init__.py  prefetch.py  report.py  scoring_app.py  upload.py
src/vidforge/debug/character_pipeline/: __init__.py  discovery.py  height.py  images.py  scaling.py
src/vidforge/generators/: __init__.py  base.py
src/vidforge/generators/heights/: __init__.py  pipeline.py
src/vidforge/generators/heights/debug/: __init__.py  discovery.py  height.py  images.py  scaling.py
src/vidforge/sources/: __init__.py  anilist.py  base.py  fandom.py  jikan.py
tests/: test_anilist.py  test_bg_remove.py  test_cache.py  test_cli.py  test_fandom.py  test_images.py  test_jikan.py  test_models.py  test_music.py  test_sources.py
