[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidforge"
version = "0.1.0"
description = "Modular video generation system with multiple sources and platform targets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "sf-hamilton[visualization]>=0.30",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "pillow>=10.0",
    "rembg>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
all = [
    "vidforge[youtube]",
    "vidforge[dev]",
]
youtube = [
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
]
music = [
    "yt-dlp>=2023.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
vidforge = "vidforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
